86		Titled advisors now included
87		Remove save incompatible with current CK2 version
88		Added Latin_Empire1303_04_27.ck2
89		If an advisor has no home, don't try to place them somewhere
90		Option for advisors now in configuration file
91		No longer count titles help by no-one as independent
92		Lots of advisors
93		Remove option for advisors from configuration file
94		Improved variety of advisors
95		Initial gavelkind implementation
96		Restrict gavelkind heirs to valid children
97		Rename test config file appropriately
98		Update Gavelkind to handle no immediate heirs
99		Turkish Succession
100		Restore monarch conversion in ROTW (had been broken in change 48)
101		Regnal numbers for rulers
102		Constructors for everyone!
103		Pass references data structures, not copies (should cause miniscule speedup)
104		Update logging to be more helpful
105		Verify all CK2 provinces are mapped
106		Add missing province mappings
107		Water provinces mapped
108		Tech group from history files
109		Better map spread
110		Map ROTW water provinces
111		A few more map fixes
112		Heirs for ROTW nations
113		Eliminate extra space in ROTW ruler names
114		Correct empty dynasty name
115		Use doParseFile()
116		Advisors for ROTW (except the parser chokes on the history files)
117		Updated parser files (and fixes to province mapping revealed by update)
118		Turkish/Open Succession fixed
119		Primogeniture succession no longer can lead to someone being their own heir
120		Log unmapped EU3 provinces instead of crashing
121		Regents
122		Added Ireland_endgame to sample saves
123		Updated readme.txt
124		Added dirty religion mappings
		Added converter mod directory: 0.1 now adds new religions
125		Merge
126		CK3 to EU3 converter mod religion and cultures
127		Updated country title mapping with almost all tags
128		Merge
129		Sync Changelog.txt with repository
130		Add Nyrael's Croatia 1453 game to sample saves
131		Get version number from save game
132		Add Hispania1399_10_17 save game